--- a/src/styles/modules/nav.module.scss
+++ b/src/styles/modules/nav.module.scss
@@ -1,3 +1,10 @@
+.nav {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding: 1rem;
+  background-color: whitesmoke;
+}
 .list {
   display: flex;
   flex-wrap: wrap;
