--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -11,3 +11,13 @@
   background-color: whitesmoke;
   height: 2px;
 }
+.btn {
+  margin-left: auto;
+  padding: 1rem 2rem;
+  background-color: royalblue;
+  border-radius: 12px;
+  font-size: 2rem;
+}
+.textRight {
+  text-align: right;
+}
