--- a/src/index.scss
+++ b/src/index.scss
@@ -3,12 +3,35 @@
 @import "./styles/reset.scss";
 
 body {
-  background-color: colors.$bg-dark;
   font-family: "Poppins";
 }
 #root {
   height: 100%;
   margin: 0 auto;
+}
+#page {
+  height: 100%;
+  background-color: var(--color-dark);
+  color: var(--light-color);
+  --color-light: #{colors.$color-light};
+  --color-light-lighter: #{colors.$color-light-lighter};
+  --color-light-darker: #{colors.$color-light-darker};
+  --color-dark: #{colors.$color-dark};
+  --color-dark-lighter: #{colors.$color-dark-lighter};
+  --color-dark-darker: #{colors.$color-dark-darker};
+  --color-primary: #{colors.$primary};
+  --color-primary-light: #{colors.$primary-light};
+  --color-primary-dark: #{colors.$primary-dark};
+  &.dark {
+    --color-light: #{colors.$color-dark};
+    --color-light-lighter: #{colors.$color-dark-lighter};
+    --color-light-darker: #{colors.$color-dark-darker};
+    --color-dark: #{colors.$color-light};
+    --color-dark-lighter: #{colors.$color-light-lighter};
+    --color-dark-darker: #{colors.$color-light-darker};
+    --color-primary-light: #{colors.$primary-dark};
+    --color-primary-dark: #{colors.$primary-light};
+  }
 }
 main {
   display: flex;
