--- a/src/components/ThemeButton/ThemeButton.module.scss
+++ b/src/components/ThemeButton/ThemeButton.module.scss
@@ -1,11 +1,16 @@
 .btn {
-  width: 8rem;
-  height: 4rem;
+  --size: 7rem;
+  width: var(--size);
   padding: 0.5rem;
-  border-radius: 2rem;
-  background-color: var(--color-dark);
+  border: 2px solid whitesmoke;
+  border-radius: 8rem;
+  // background-color: var(--color-dark);
+  background-color: #323232;
   &.active {
+    background-color: whitesmoke;
+    border-color: #323232;
     .circle {
+      background-color: #323232;
       left: 100%;
       transform: translateX(-100%);
     }
@@ -14,10 +19,11 @@
     position: relative;
     left: 0%;
     transform: translateX(0%);
-    width: 50%;
-    height: 100%;
+    width: calc(var(--size) / 2 - 1rem);
+    height: calc(var(--size) / 2 - 1rem);
     border-radius: 50%;
-    background-color: var(--color-light);
+    background-color: whitesmoke;
+    // background-color: var(--color-light);
     transition: 250ms ease-in-out left, 250ms ease-in-out transform;
   }
 }
